added login function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<div style="">
-    <h1>
-      {{title}}
-    </h1>
-    <h3>I'm in the app</h3>
-    
+<div class="page-header">
+   <h1>
+       <div class="text-center">
+           <p class="text-primary">Online shop for Dr. Y's class! - Think of a name for this</p>
+        </div>
+   </h1>
 </div>
+
 <app-login></app-login>
+
+
+<router-outlet></router-outlet>
