--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,25 @@
-<p>This is a login component</p>
 
-<ul>
-    <li *ngFor="let course of courses">
-        {{ course }}
-    </li>
-</ul>
+
+<div class="container-fluid">
+  <div class="text-center">
+    <p>This is a login component</p>
+    <h2>testing login with google - click on the button</h2>
+    <div *ngIf="auth.user$ | async as user; else login">
+        <pre>
+          {{user | json }}
+        </pre>
+          <hr>
+              <button type="button" class="close" aria-label="Close" (click)="auth.signOut()">Sign Out
+                <span aria-hidden="true">&times;</span>
+              </button>
+    </div>
+      
+
+    <ng-template #login>
+        <button class="button" (click)="auth.googleSignin()">Login with Google</button>
+    </ng-template>
+
+</div>
+
+</div>
+  
