added main menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
-<div class="page-header">
-   <h1>
-       <div class="text-center">
-           <p class="text-primary">Online shop for Dr. Y's class! - Think of a name for this</p>
-        </div>
-   </h1>
-</div>
+
+
+<app-menu></app-menu>
+
 
 <app-login></app-login>
 
