--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -2,7 +2,12 @@
 
 <div *ngIf="cars?.length > 0;else noCars">
   <ul *ngFor="let car of cars">
-    <h3>{{ car.name }}</h3>
+    <h3>
+      <a [title]="'Click here to buy '+ car.name"
+         [routerLink]="['/checkout']">
+        {{ car.name }}
+      </a>
+    </h3>
     <h4>{{ car.price | currency }}</h4>
     <p>{{ car.description }}</p>
   </ul>
