Checkout Complete, Website Appearance Updated
Checkout should behave more like an actual checkout. Doesn't save anything, but it is populated with a checkout options for each product and contains unique price options for each prodcut.

--- a/src/app/bike-list/bike-list.component.html
+++ b/src/app/bike-list/bike-list.component.html
@@ -4,7 +4,7 @@
   <ul *ngFor="let bike of bikes">
     <h3>
       <a [title]="'Click here to buy '+ bike.name"
-         [routerLink]="['/checkout']">
+         [routerLink]="['/checkout', bike.id, bike.name, bike.description, bike.price]">
         {{ bike.name }}
       </a>
     </h3>
